# GarbageCollection

./: CMakeLists.txt  README.md  garbage_collection.cpp  garbage_collection.h  i_smart_object.cpp  i_smart_object.h  main.cpp  smart_binary_tree.h  smart_classes_with_deriving.h  smart_object.cpp  smart_object.h
